--- a/.github/workflows/0.set_secret.yaml
+++ b/.github/workflows/0.set_secret.yaml
@@ -3,7 +3,7 @@ name: 0.Set Secrets
 on:
   push:
     branches:
-      - master
+      - develop
 
 jobs:
 
@@ -16,10 +16,16 @@ jobs:
       INFRA_GIT_REPO_TOKEN: ${{ secrets.CAL_SC_INFRA_GIT_REPO_TOKEN }}
 
     steps:
+
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           ref: master
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ref: develop
 
       - name: Set cloudflare email and apikey from secret to github action environment variable
         env:
