--- a/.github/workflows/1.set_infrastructure.yaml
+++ b/.github/workflows/1.set_infrastructure.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-            ref: master
+            ref: develop
 
       - name: Set aws profile for terraform from secret to file on github action runner
         env:
