--- a/.github/workflows/0.set_secret.yaml
+++ b/.github/workflows/0.set_secret.yaml
@@ -17,7 +17,7 @@ jobs:
       INFRA_GIT_REPO_TOKEN: ${{ secrets.CAL_SC_INFRA_GIT_REPO_TOKEN }}
 
     steps:
-      - run: echo "Running!"
+      - run: echo "Runniasdasdasdang!"
       
       # - name: Checkout repository
       #   uses: actions/checkout@v3
