--- a/.github/workflows/0.trigger_master_branch_workflow.yaml
+++ b/.github/workflows/0.trigger_master_branch_workflow.yaml
@@ -11,7 +11,4 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Dispatch Master Workflow
-        uses: peter-evans/workflow-dispatch@v1
-        with:
-          workflow: "0.trigger_master_branch_workflow.yaml"  # Path to the trigger-master.yml workflow
+      - run: echo "Running develop!"
