--- a/.github/workflows/0.set_secret.yaml
+++ b/.github/workflows/0.set_secret.yaml
@@ -3,8 +3,7 @@ name: 0.Set Secrets
 on:
   push:
     branches:
-      - develop
-
+      - master
 
 jobs:
 
@@ -17,32 +16,31 @@ jobs:
       INFRA_GIT_REPO_TOKEN: ${{ secrets.CAL_SC_INFRA_GIT_REPO_TOKEN }}
 
     steps:
-      - run: echo "Ruasdasdadasdasdning!"
-      
-      # - name: Checkout repository
-      #   uses: actions/checkout@v3
-      #   with:
-      #     ref: master
 
-      # - name: Checkout repository
-      #   uses: actions/checkout@v3
-      #   with:
-      #     ref: develop
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ref: master
 
-      # - name: Set cloudflare email and apikey from secret to github action environment variable
-      #   env:
-      #     CLOUDFLARE_CSV_DATA: ${{ secrets.CAL_SC_CSV_CLOUDFLARE_ENCODED }}
-      #     GIT_OWNER: ${{ env.INFRA_GIT_REPO_OWNER }}
-      #     GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
-      #     GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
-      #   run: |
-      #     bash "2.WORKFLOWS_SCRIPT/set_cloudflare_profile_with_csv_data_to_gh_repo_secret.sh"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ref: develop
 
-      # - name: Set github repository from secret to github action environment variable
-      #   env:
-      #     GIT_PROFILE_CSV_DATA: ${{ secrets.CAL_SC_CSV_GIT_REPO_PROFILE_ENCODED }}
-      #     GIT_OWNER: ${{ env.INFRA_GIT_REPO_OWNER }}
-      #     GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
-      #     GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
-      #   run: |
-      #     bash "2.WORKFLOWS_SCRIPT/set_git_auth_url_with_csv_data_to_gh_repo_secret.sh"
+      - name: Set cloudflare email and apikey from secret to github action environment variable
+        env:
+          CLOUDFLARE_CSV_DATA: ${{ secrets.CAL_SC_CSV_CLOUDFLARE_ENCODED }}
+          GIT_OWNER: ${{ env.INFRA_GIT_REPO_OWNER }}
+          GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
+          GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
+        run: |
+          bash "2.WORKFLOWS_SCRIPT/set_cloudflare_profile_with_csv_data_to_gh_repo_secret.sh"
+
+      - name: Set github repository from secret to github action environment variable
+        env:
+          GIT_PROFILE_CSV_DATA: ${{ secrets.CAL_SC_CSV_GIT_REPO_PROFILE_ENCODED }}
+          GIT_OWNER: ${{ env.INFRA_GIT_REPO_OWNER }}
+          GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
+          GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
+        run: |
+          bash "2.WORKFLOWS_SCRIPT/set_git_auth_url_with_csv_data_to_gh_repo_secret.sh"
