--- a/.github/workflows/0.set_secret.yaml
+++ b/.github/workflows/0.set_secret.yaml
@@ -1,4 +1,4 @@
-name: 0.Set Secrets
+name: Set Secrets
 
 on:
   push:
@@ -21,11 +21,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: master
-
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          ref: develop
 
       - name: Set cloudflare email and apikey from secret to github action environment variable
         env:
