--- a/.github/workflows/0.trigger_master_branch_workflow.yaml
+++ b/.github/workflows/0.trigger_master_branch_workflow.yaml
@@ -10,17 +10,25 @@ jobs:
   trigger-master-workflows:
     runs-on: ubuntu-latest
 
+    env:
+      GIT_REPO_OWNER: "CAL-REPO"
+      GIT_REPO_NAME: "CAL-INFRA"
+      GIT_REPO_BRANCH: "master"
+      GIT_WORKFLOW_DEPLOY_NAME: "Deploy Infrastructure"
+      GIT_WORKFLOW_DELETE_NAME: "Delete Infrastructure"
+      GIT_WORKFLOW_CONDITION: "deploy"
+
     steps:
 
       - name: Determine Workflow to Trigger
         id: decide
         run: |
-          if [[ condition ]]; then
+          if [[ ${{ env.GIT_WORKFLOW_CONDITION }} == "deploy" ]]; then
             echo "Deploy workflow"
-            echo "::set-output name=Deploy Infrastructure::deploy-workflow"  # Use the actual workflow name in the Master Workflows repository
+            echo "::set-output name=${{ env.GIT_WORKFLOW_DEPLOY_NAME }}::deploy-workflow"  # Use the actual workflow name in the Master Workflows repository
           else
             echo "Delete workflow"
-            echo "::set-output name=Delete Infrastructure::delete-workflow"  # Use the actual workflow name in the Master Workflows repository
+            echo "::set-output name=${{ env.GIT_WORKFLOW_DELETE_NAME }}::delete-workflow"  # Use the actual workflow name in the Master Workflows repository
         shell: bash
 
       - name: Trigger Appropriate Workflow on Master Workflows Repository
@@ -30,9 +38,9 @@ jobs:
           script: |
             const workflowToTrigger = `${{ steps.decide.outputs.workflow }}`;
             const response = await octokit.actions.createWorkflowDispatch({
-              owner: 'CAL-REPO',
-              repo: 'CAL-INFRA',
+              owner: ${{ env.GIT_REPO_OWNER }},
+              repo: ${{ env.GIT_REPO_NAME }},
               workflow_id: workflowToTrigger,
-              ref: 'refs/heads/main'  # Use the appropriate branch name
+              ref: ${{ env.GIT_REPO_BRANCH }}  # Use the appropriate branch name
             });
             console.log(`Triggered ${workflowToTrigger} in Master Workflows repository`);
