--- a/.github/workflows/0.trigger_master_branch_workflow.yaml
+++ b/.github/workflows/0.trigger_master_branch_workflow.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Trigger Appropriate Workflow on Master Workflows Repository
         uses: actions/github-script@v4
         with:
-          github-token: ${{ env.GIT_REPO_TOKEN }}
+          github-token: ${{ secrets.GIT_REPO_PERSONAL_TOKEN_INFRA_1 }}
           script: |
             const workflowToTrigger = `${{ steps.decide.outputs.workflow }}`;
             const response = await octokit.actions.createWorkflowDispatch({
