--- a/.github/workflows/0.trigger_master_branch_workflow.yaml
+++ b/.github/workflows/0.trigger_master_branch_workflow.yaml
@@ -20,7 +20,7 @@ jobs:
       GIT_WORKFLOW_CONDITION: "deploy"
 
     steps:
-##
+
       - name: Determine Workflow to Trigger
         id: decide
         run: |
@@ -39,7 +39,7 @@ jobs:
           github-token: ${{ secrets.GIT_REPO_PERSONAL_TOKEN_INFRA_1 }}
           script: |
             const workflowToTrigger = process.env.WORKFLOW_TO_TRIGGER;
-            const response = await octokit.actions.createWorkflowDispatch({
+            const response = await octokit.rest.actions.createWorkflowDispatch({
               owner: "${{ env.GIT_REPO_OWNER }}",
               repo: "${{ env.GIT_REPO_NAME }}",
               workflow_id: workflowToTrigger,
