--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -1,9 +1,11 @@
 name: Deploy Infrastructure
 
 on:
-  push:
-      branches:
-      - deploy
+  workflow_run:
+    workflows:
+      - "Execute Master Workflow"
+    types:
+      - completed
 
 jobs:
 
@@ -45,8 +47,6 @@ jobs:
         uses: actions/checkout@v3
         with:
             ref: deploy
-
-      - run: "echo deploy infra"
 
       - name: Set aws profile for terraform from secret to file on github action runner
         env:
