--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -42,13 +42,13 @@ jobs:
         uses: actions/checkout@v3
         with:
             ref: master
-            path: master
+            path: ./master
 
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
             ref: deploy
-            path: deploy
+            path: ./deploy
 
       - name: Set aws profile for terraform from secret to file on github action runner
         env:
@@ -68,7 +68,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
 
       - name: Initialize terraform for infrastruture
-        working-directory: deploy/03.TERRAFORM/01.SEOUL
+        working-directory: ./deploy/03.TERRAFORM/01.SEOUL
         run: |
           terraform init \
             -backend-config="region=${{ env.INFRA_TF_BACKEND_S3_BUCKET_REGION }}" \
