--- a/.github/workflows/0.set_secret.yaml
+++ b/.github/workflows/0.set_secret.yaml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: master
+          path: master
 
       - name: Set cloudflare email and apikey from secret to github action environment variable
         env:
@@ -29,7 +30,7 @@ jobs:
           GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
           GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
         run: |
-          bash "2.WORKFLOWS_SCRIPT/set_cloudflare_profile_with_csv_data_to_gh_repo_secret.sh"
+          bash "master/2.WORKFLOWS_SCRIPT/set_cloudflare_profile_with_csv_data_to_gh_repo_secret.sh"
 
       - name: Set github repository from secret to github action environment variable
         env:
@@ -38,4 +39,4 @@ jobs:
           GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
           GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
         run: |
-          bash "2.WORKFLOWS_SCRIPT/set_git_auth_url_with_csv_data_to_gh_repo_secret.sh"
+          bash "master/02.WORKFLOWS_SCRIPT/set_git_auth_url_with_csv_data_to_gh_repo_secret.sh"
