--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -45,25 +45,27 @@ jobs:
             path: deploy
 
       - name: Set aws profile for terraform from secret to file on github action runner
+        working-directory: deploy/1.WORKFLOWS_SCRIPT
         env:
           AWS_IAM_KEY_CSV_DATA: ${{ secrets.CAL_SC_CSV_AWS_PROFILE_ENCODED }}
         run: |
-          bash "master/2.WORKFLOWS_SCRIPT/set_aws_profile_with_csv_data_to_local.sh"
+          bash "set_aws_profile_with_csv_data_to_local.sh"
 
       - name: Make s3 bucket for terraform backend
+        working-directory: deploy/1.WORKFLOWS_SCRIPT
         env:
           AWS_ACCESS_KEY_ID: ${{ env.INFRA_TF_BACKEND_S3_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ env.INFRA_TF_BACKEND_S3_SECRET_KEY }}
           AWS_REGION: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_REGION }}
           S3_BUCKET_NAME: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_NAME }}
         run: |
-          bash "master/2.WORKFLOWS_SCRIPT/make_s3_bucket.sh"
+          bash "make_s3_bucket.sh"
 
       - name: Set up terraform version
         uses: hashicorp/setup-terraform@v2
 
       - name: Initialize terraform for infrastruture
-        working-directory: deploy/1.TERRAFORM/01.SEOUL
+        working-directory: deploy/2.TERRAFORM/01.SEOUL
         run: |
           terraform init \
             -backend-config="region=${{ env.INFRA_TF_BACKEND_S3_BUCKET_REGION }}" \
@@ -74,19 +76,19 @@ jobs:
             -backend-config="encrypt=true"
 
       - name: Make terraform workspace for infrastructure
-        working-directory: deploy/1.TERRAFORM/01.SEOUL
+        working-directory: deploy/2.TERRAFORM/01.SEOUL
         env:
           TERRAFORM_WORKSPACE_NAME: ${{ env.INFRA_TF_WORKSPACE_NAME_DEV }}
         run: |
-          bash "../2.WORKFLOWS_SCRIPT/make_terraform_workspace.sh"
+          bash "../../1.WORKFLOWS_SCRIPT/make_terraform_workspace.sh"
 
       - name: Select terraform workspace for infrastructure
-        working-directory: deploy/1.TERRAFORM/01.SEOUL
+        working-directory: deploy/2.TERRAFORM/01.SEOUL
         run: |
           terraform workspace select ${{ env.INFRA_TF_WORKSPACE_NAME_DEV }}
 
       - name: Plan and Apply Terraform develop Infrastruture
-        working-directory: deploy/1.TERRAFORM/01.SEOUL
+        working-directory: deploy/2.TERRAFORM/01.SEOUL
         env:
           TF_VAR_CF_DOMAIN_MAIN: ${{ env.CLOUDFLARE_DOMAIN }}
           TF_VAR_AWS_KEY_S3_BUCKET_NAME: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_NAME }}
@@ -100,6 +102,6 @@ jobs:
         run: |
           terraform validate
           terraform plan -var-file="./ENV/dev.tfvars"
-          terraform apply -var-file="./ENV/dev.tfvars" --auto-approve
+          # terraform apply -var-file="./ENV/dev.tfvars" --auto-approve
 
         
