--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -102,6 +102,6 @@ jobs:
         run: |
           terraform validate
           terraform plan -var-file="./ENV/dev.tfvars"
-          # terraform apply -var-file="./ENV/dev.tfvars" --auto-approve
+          terraform apply -var-file="./ENV/dev.tfvars" --auto-approve
 
         
