--- a/.github/workflows/0.set_secret.yaml
+++ b/.github/workflows/0.set_secret.yaml
@@ -24,19 +24,21 @@ jobs:
           path: master
 
       - name: Set cloudflare email and apikey from secret to github action environment variable
+        working-directory: master/2.WORKFLOWS_SCRIPT
         env:
           CLOUDFLARE_CSV_DATA: ${{ secrets.CAL_SC_CSV_CLOUDFLARE_ENCODED }}
           GIT_OWNER: ${{ env.INFRA_GIT_REPO_OWNER }}
           GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
           GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
         run: |
-          bash "master/2.WORKFLOWS_SCRIPT/set_cloudflare_profile_with_csv_data_to_gh_repo_secret.sh"
+          bash "set_cloudflare_profile_with_csv_data_to_gh_repo_secret.sh"
 
       - name: Set github repository from secret to github action environment variable
+        working-directory: master/2.WORKFLOWS_SCRIPT
         env:
           GIT_PROFILE_CSV_DATA: ${{ secrets.CAL_SC_CSV_GIT_REPO_PROFILE_ENCODED }}
           GIT_OWNER: ${{ env.INFRA_GIT_REPO_OWNER }}
           GIT_REPO: ${{ env.INFRA_GIT_REPO_NAME }}
           GH_TOKEN: ${{ env.INFRA_GIT_REPO_TOKEN }}
         run: |
-          bash "master/02.WORKFLOWS_SCRIPT/set_git_auth_url_with_csv_data_to_gh_repo_secret.sh"
+          bash "set_git_auth_url_with_csv_data_to_gh_repo_secret.sh"
