--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -104,4 +104,27 @@ jobs:
           # terraform plan -var-file="./ENV/dev.tfvars"
           terraform apply -var-file="./ENV/dev.tfvars" --auto-approve
 
-        
+      # - name: Plan and Apply Terraform develop Infrastruture
+      #   working-directory: deploy/2.TERRAFORM/01.SEOUL
+      #   env:
+      #     CONFIG_FILE_PATH: ${EXECUTE_VAR.ANSIBLE_CONF_FILE_PATH}
+      #     INVENTORY_FILE_PATH: ${EXECUTE_VAR.ANSIBLE_HOST_FILE_PATH}
+      #     PLAYBOOK_DIR: ${EXECUTE_VAR.ANSIBLE_PLAYBOOK_APPLY_DIR_PATH}
+      #     HOST_GROUP: ${EXECUTE_VAR.ANSIBLE_HOST_GROUP}
+      #   run: |
+      #     bash "execute_ansible_playbook.sh"
+
+      - name: Destroy Terraform develop Infrastruture
+        working-directory: deploy/2.TERRAFORM/01.SEOUL
+        env:
+          TF_VAR_CF_DOMAIN_MAIN: ${{ env.CLOUDFLARE_DOMAIN }}
+          TF_VAR_AWS_KEY_S3_BUCKET_NAME: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_NAME }}
+          TF_VAR_AWS_KOPS_STATE_S3_BUCKET: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_NAME }}
+          TF_VAR_OPS_USER_NAME: ${{ env.OPS_USER_NAME }}
+          TF_VAR_OPS_USER_PW: ${{ env.OPS_USER_PW }}
+          TF_VAR_OPS_GIT_USER_NAME: ${{ env.OPS_GIT_USER_NAME }}
+          TF_VAR_OPS_GIT_USER_EMAIL: ${{ env.OPS_USER_EMAIL }}  
+          TF_VAR_OPS_GIT_REPO_URL: "https://github.com/${{ env.OPS_GIT_REPO_OWNER }}/${{ env.OPS_GIT_REPO_NAME }}.git"
+          TF_VAR_OPS_GIT_REPO_AUTH_URL: "https://${{ env.OPS_GIT_REPO_OWNER }}:${{ env.OPS_GIT_REPO_PERSONAL_TOKEN }}@github.com/${{ env.OPS_GIT_REPO_OWNER }}/${{ env.OPS_GIT_REPO_NAME }}.git"
+        run: |
+          terraform destroy -var-file="./ENV/dev.tfvars" --auto-approve
