--- a/4.ANSIBLE/2.PLAYBOOK_DESTROY/09.playbook_deploy_argocd.yaml
+++ b/4.ANSIBLE/2.PLAYBOOK_DESTROY/09.playbook_deploy_argocd.yaml
@@ -2,19 +2,51 @@
   gather_facts: false
   hosts: "{{ host_group }}"
 
-- name: Create Namespace
-  k8s:
-    state: present
-    definition:
-      kind: Namespace
-      apiVersion: v1
-      metadata:
-        name: my-namespace
+  tasks:
 
-- name: Deploy My Helm Chart
-  helm:
-    name: my-app
-    chart: ./path/to/my-chart
-    namespace: my-namespace
-    values_files:
-      - path/to/my-values.yaml
+  - name: Create Namespace
+    k8s:
+      state: present
+      definition:
+        kind: Namespace
+        apiVersion: v1
+        metadata:
+          name: my-namespace
+
+  - name: Deploy My Helm Chart
+    helm:
+      name: my-app
+      chart: ./path/to/my-chart
+      namespace: my-namespace
+      values_files:
+        - path/to/my-values.yaml
+
+  - name: Install Helm chart for ArgoCD
+    community.kubernetes.helm:
+      name: argocd
+      chart_ref: argo/argo-cd
+      release_namespace: argocd
+      repo_url: https://argoproj.github.io/argo-helm
+      create_namespace: true
+      values_files:
+        - ./values.yaml
+    register: helm_result
+
+  - name: Display Helm installation result
+    debug:
+      var: helm_result
+
+  # - name: Add ArgoCD Helm repository
+  #   community.kubernetes.helm_repository:
+  #     name: argo-cd
+  #     url: https://argoproj.github.io/argo-helm
+  #     state: present
+
+  # - name: Install ArgoCD Helm chart
+  #   community.kubernetes.helm:
+  #     name: argo-cd
+  #     chart_ref: argo-cd/argo-cd
+  #     release_namespace: argocd
+  #     values_files:
+  #       - path/to/your/argocd-values.yaml
+  #     wait: yes
