--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -53,9 +53,7 @@ jobs:
           else
             echo "destroy"
           fi
-        # Output the result of the step
-        env:
-          DEPLOY_MODE: ${{ steps.determine_mode.outputs.stdout }}
+          
 
       - name: Set aws profile for terraform from secret to file on github action runner
         working-directory: deploy/1.WORKFLOWS_SCRIPT
@@ -103,7 +101,7 @@ jobs:
       - name: Apply or Destroy Terraform develop Infrastruture
         working-directory: deploy/2.TERRAFORM/01.SEOUL
         env:
-          DEPLOY_MODE: ${{ env.DEPLOY_MODE }} # Pass the deploy mode as an environment variable
+          DEPLOY_MODE: ${{ steps.determine_mode.outputs.stdout }} # Pass the deploy mode as an environment variable
           TF_VAR_CF_DOMAIN_MAIN: ${{ env.CLOUDFLARE_DOMAIN }}
           TF_VAR_AWS_KEY_S3_BUCKET_NAME: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_NAME }}
           TF_VAR_AWS_KOPS_STATE_S3_BUCKET: ${{ env.INFRA_TF_BACKEND_S3_BUCKET_NAME }}
@@ -115,13 +113,13 @@ jobs:
           TF_VAR_OPS_GIT_REPO_AUTH_URL: "https://${{ env.OPS_GIT_REPO_OWNER }}:${{ env.OPS_GIT_REPO_PERSONAL_TOKEN }}@github.com/${{ env.OPS_GIT_REPO_OWNER }}/${{ env.OPS_GIT_REPO_NAME }}.git"
         run: |
           terraform validate
-          terraform plan -var-file="${{ env.INFRA_TF_VAR_FILE_NAME_DEV }}"
+          terraform plan -var-file="${{ env.INFRA_TF_VAR_FILE_NAME_DEV }}" -out=tfplan
           if [[ "${{ env.DEPLOY_MODE }}" == "deploy" ]]; then
-            terraform apply -var-file="${{ env.INFRA_TF_VAR_FILE_NAME_DEV }}" --auto-approve
+            terraform apply tfplan --auto-approve
           else
-            terraform destroy -var-file="${{ env.INFRA_TF_VAR_FILE_NAME_DEV }}" --auto-approve
+            terraform destroy tfplan --auto-approve
           fi
-
+          
       # - name: Plan and Apply Terraform develop Infrastruture
       #   working-directory: deploy/2.TERRAFORM/01.SEOUL
       #   env:
